--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <!-- <app-root></app-root> -->
+  <!-- <aon-product dataInput="{name:'Vilas Shetkar'}"></aon-product> -->
+ 
 </body>
 </html>
